--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -15,3 +15,15 @@
 
 
 }
+
+.submitButton {
+
+    color: white;
+    background-color: darkorange;
+    border-width: 5px;
+    border-color: white;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 10px;
+
+}
